; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-brvlan.c_is_bit_set.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-brvlan.c_is_bit_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @is_bit_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_bit_set(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = zext i32 %5 to i64
  %7 = icmp ult i64 %6, 32
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @UINT32_C(i32 1)
  %12 = load i32, i32* %3, align 4
  %13 = shl i32 %11, %12
  %14 = and i32 %10, %13
  ret i32 %14
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @UINT32_C(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
